# certifier-framework-for-confidential-computing

./: .clang-format  .clang-format-ignore  .gitignore  APP-RUNTIME-STRUCTURE.md  BUILD  CLANG_FORMAT_FIX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTOR_LADDER.md  GOVERNANCE.md  INSTALL.md  MAINTAINERS.md  README  README.md  SECURITY.md  STATUS  WORKSPACE
AWS/: documentation.md
Doc/: 2023-10-CCC-Proposal-TechTalk.pptx  2023-CC-SummitTechnical-Final.pptx  AWS-documentation.md  Directory-structure-for-examples-and-deployment-guide.docx  Guide.docx  RepositoryWhitepaper.docx  SevProvisioning.docx  Suggested_features.md  Suggested_features.txt  SummitKeynote-Final.pptx  SummitTechnical-Final.pptx  aws_install.md  build.md  developer_tour.md  developer_tour.txt  install-certifier-Ubuntu-20.04.md  multidomainChanges.txt  python_bindings.md  tdx_design_note.md  tdx_design_note.txt
Meetings/: README.md
SWIG/: README.md
acl_lib/: EXPERIMENTAL.md  Notes  acl.cc  acl.h  acl.proto  acl_lib.mak  acl_lib_arm.mak  acl_rpc.cc  acl_rpc.h  acl_support.cc  acl_support.h  file_1  instructions.md  new_apps_ideas.txt  standalone_acl_lib_test.mak  standalone_app.cc  standalone_app.mak  test_acl.cc
application_service/: Notes.md  Notes.txt  app_service.cc  app_service.cc.new  app_service.mak  app_service_new.cc  app_service_new.mak  app_service_new_api.mak  hello_world.cc  instructions.md  instructions.txt  policy_key.cc  prepare-test.sh  run-test.sh  script  send_request.cc  test_user.cc
certifier_service/: comments.txt  go.mod  go.sum  instructions.md  simpleserver.go  simpleserver.go.old  test_sized_client.go  test_sized_server.go
deprecated/: Todo  cc_helpers.cc.old  certifier_description.docx  certifier_diagrams.pptx  example_app.cc  simpleclient.go.old  simpleserver.go.old
include/: api_flow.txt  application_enclave.h  cc_helpers.h  cc_useful.h  certifier.h  certifier_algorithms.h  certifier_framework.h  certifier_framework.i  certifier_pb.i  certifier_tests.h  certifier_tests.i  certifier_utilities.h  claims_tests.h  nvidia.h  nvidia_impl.h  nvidia_mock.h  primitive_tests.h  simulated_enclave.h  store_tests.h  support.h  support_tests.h  swigpytest.h  swigpytest.i  swigpytests.h  swigpytests.i  x509_tests.h
openenclave_test/: Makefile  attestation.edl  instructions.md  instructions.txt
sample_app/: Notes.txt  example_app.cc  example_app.mak  example_app_new.cc  instructions.txt  script
sample_apps/: First_Aid_Real_deployments.md  Notes.md  README.md  cleanup.sh  run_example.sh
sample_apps/simple_app_java/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  simple_core_android.cc
sample_apps/simple_app_java/native/: CMakeLists.txt  cf_shims.cc  cf_shims.h  detect_paths.sh  secure_authenticated_channel.i  store.i  trust_manager.i
sev-snp-simulator/: Makefile  attestation.h  instructions.md  instructions.txt  sev-guest.h  sevguest.c  sevguest.h  sevnull.mod.c  snp-derive-key.h
src/: Noteontests.md  Noteontests.txt  application_enclave.cc  cc_helpers.cc  cc_helpers.cc.new  cc_helpers_new.cc  cc_useful.cc  certificate_tests.cc  certifier.cc  certifier.mak  certifier.pb.cc  certifier.pb.h  certifier.proto  certifier_algorithms.cc  certifier_proofs.cc  certifier_tests.cc  certifier_tests.mak  channel.cc  claims_tests.cc  cleanup.sh  nvidia_tests.cc  pipe_read_test.cc  primitive_tests.cc  sev_policy.json  sev_policy_script.sh  sev_tests.cc  simulated_enclave.cc  store_tests.cc  support.cc  support_tests.cc  swigpytest.cc  swigpytests.cc  test_channel.cc  test_support.cc  tpm_tests.cc  x509_tests.cc
src/cca/: cca.h  (+4 more)
src/keystone/: CMakeLists.txt  keystone_api.cc  keystone_api.h  keystone_shim.cc  keystone_shim.h  keystone_test.cc  real_test.mak  sdk_instructions.txt  shim_test.mak
src/keystone/api_only_app/: api_only.mak  api_only_app.cc
src/keystone/host/: host.cpp
src/keystone/keystone_tests/: keystone_shim.cc  keystone_test.cc  keystone_tests.mak
src/tpm2/: CMakeLists.txt  ClientGenerateProgramKeyRequest.cc  ClientGetProgramKeyCert.cc  CloudProxySignEndorsementKey.cc  CloudproxyDeploymentNutsandBolts.docx  Convert.cc  Convert.h  CreateAndSaveCloudProxyKeyHierarchy.cc  GeneratePolicyKey.cc  License_notices.txt  Openssl_help.cc  Openssl_help.h  Pad_test.cc  QuoteProtocol.cc  SelfSignPolicyCert.cc  ServerSignProgramKeyRequest.cc  TPM2.0simpleexampleinstructions.docx  TPM2Cloudproxyprototypeandprotocol.docx  TPM2support.docx  add_to_make.txt  certs.txt  checkin_test.sh  clean-tpm-simulator.sh  conversions.h  convert.cc  convert.h  deploymentguide.docx  endorsement.cc  instr.txt  instructions.md  openssl_help.cc  openssl_help.h  padtest.cc  quote.cc  quote_protocol.h  quotenotes.txt  seal.cc  start-tpm-simulator.sh  swtpmins.txt  tpm12.h  (+12 more)
src/tpm2/boneyard/: ClientGenerateProgramKeyRequest.cc  ClientGetProgramKeyCert.cc  CloudProxySignEndorsementKey.cc  CreateAndSaveCloudProxyKeyHierarchy.cc  GeneratePolicyKey.cc  GetEndorsementKey.cc  Openssl_help.cc  Pad_test.cc  QuoteProtocol.cc  QuoteProtocol.h  RestoreCloudProxyKeyHierarchy.cc  SelfSignPolicyCert.cc  ServerSignProgramKeyRequest.cc  SigningInstructions.cc  prototest.sh  testall.sh  tpm2.mak  tpm2.proto  tpm2_lib.h  tpm2_support.cc
src/tpm2/new_tmp/: tpm2_lib.cc  tpm2_lib.h  tpm2_support.cc  tpm2_test.cc
src/tpm2/old_tmp/: tpm2_lib.cc  tpm2_support.h  tpm2_test.cc
tests/: README.md  gen_client_server_certs_key_files.sh  measurement_utility_test.sh
utilities/: appoint_platform.cc  cert_utility.cc  cert_utility.mak  certifier.pb.cc  combine_policy_certs.cc  combine_properties.cc  embed_policy_key.cc  generate_cert_chain.cc  generate_cert_chain.mak  key_utility.cc  make_der_cert_chain.cc  make_environment.cc  make_indirect_vse_clause.cc  make_platform.cc  make_property.cc  make_signed_claim_from_vse_clause.cc  make_simple_vse_clause.cc  make_unary_vse_clause.cc  measurement_init.cc  measurement_utility.cc  package_claims.cc  policy_generator.cc  policy_generator.mak  policy_generator_info.md  policy_generator_info.txt  policy_schema.json  policy_utilities.mak  policy_utilities_info.md  print_packaged_claims.cc  (+5 more)
(+473 files in other folders)
